# FoundersNet-dApp

./: .gitignore  Anchor.toml  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_INFO.md  DEPLOYMENT_READY.md  DEPLOY_STATUS.md  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  NETLIFY_DEPLOY.md  QUICKSTART.md  README.md  TESTING_STATUS.md  activity.md  build-prompts.md  build.sh  claude.md  deploy-devnet.sh  deploy-final.sh  deploy.sh  design-notes.md  netlify.toml  tech-stack.md  todo.md
client/: .env.example  .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/public/: _headers  _redirects
client/src/: App.tsx  index.css  main.tsx
client/src/components/: CountdownTimer.tsx  EmptyStates.tsx  ErrorBoundary.tsx  LiveIndicator.tsx  LoadingStates.tsx  ProtectedRoute.tsx
client/src/hooks/: index.ts  useAccountSubscription.ts  useAirdrop.ts  useBalance.ts  useClaimWinnings.ts  useCreateEvent.ts  useHasPosition.ts  useMarket.ts  useMarkets.ts  usePlaceBet.ts  usePortfolio.ts  useProgram.ts  useResolveEvent.ts  useTransactionToast.tsx  useUserPositions.ts  useWallet.ts
client/src/idl/: foundersnet.ts
client/src/lib/: admin.ts  anchor.ts  calculations.ts  constants.ts  errors.ts  retry.ts  solana.ts  utils.ts
client/src/pages/: Admin.tsx  CreateMarketPage.tsx  HomePage.tsx  MarketDetail.tsx  PortfolioPage.tsx  index.tsx
docs/: activity.md
programs/foundersnet/: Cargo.toml  README.md
programs/foundersnet/src/: lib.rs
programs/foundersnet/tests/: integration_tests.rs
tests/: demo.spec.ts
(+30 files in other folders)
