[package]
name = "foundersnet"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
solana-program = "1.18"

[dev-dependencies]
anchor-client = "0.29.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "foundersnet"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
