[package]
name = "foundersnet"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"

[dev-dependencies]
anchor-client = "0.29.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "foundersnet"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
cpi = []
custom-heap = []
custom-panic = []
anchor-debug = []
no-idl = []
no-log-ix-name = []
